custome/src/App.css
:root {
  --main-bg-color: rgb(155, 185, 219);
  --bluehighlight: rgb(129, 156, 7);
  --bluehighlight2: rgb(240, 226, 196);
  --secondary-bg-color: #f5f5f5;
  --white: #fff;
  --highlight: rgb(182, 9, 81);
  --secondary-highlight: rgb(219, 9, 97);
  --green: rgb(24, 99, 67);
  --blue-dark: #123a69;
}

html,
body,
#root,
.App {
  min-height: 100vh;
  background-color: var(--secondary-bg-color);
}

a {
  color: var(--highlight);
  cursor: pointer;
}

a:hover{
  color: var(--secondary-highlight);
}

.Header a:hover {
  color: var(--bluehighlight2);
}

.Filter {
  display: flex; 
  align-items: center;
}

.Filter input{
  margin-top: 2px;
}

.Filter:hover, .Category:hover {
  color: var(--highlight);
}

.Logo,
.Card,
.Filter,
.registerButton,
.loginButton,
.profileIcon,
.Category,
.checkbox, 
.downloadButton {
  cursor: pointer;
}

.App {
  display: flex;
  flex-direction: column;
}

.Header {
  background: var(--main-bg-color);
  color: #fff;
  font-size: 1.2em;
  padding: 12px 0px;
  text-align: center;
  display: flex;
  flex-direction: row;
  position: sticky;
  top: 0px;
  z-index: 3;
}

.Logo {
  margin-right: auto;
  margin-left: 20px;
  color: var(--blue-dark);
  font-weight: bold;
  text-decoration: none;
}

.searchBar {
  background: var(--secondary-bg-color);
  padding: 7px 16px;
  min-width: 30%;
  border-radius: 40px;
  margin-left: auto;
  margin-right: 30px;
}

.accountButtons {
  display: flex;
  flex-direction: row;
}

.profileIcon {
  height: 32px;
  border-radius: 40px;
  margin-right: 15px;
}

.registerButton,
.loginButton {
  padding: 4px 15px 0px;
  font-size: 16px;
}

.registerButton {
  background-color: var(--blue-dark);
  border-radius: 5px;
  color: var(--white);
}

.loginButton{
  color: var(--blue-dark);
}

.HomePage {
  display: flex;
  flex-direction: row;
  flex: 1;
}

.filterBox {
  position: relative;
  padding: 34px 50px 0px;
}

.filterLabel,
.categoryLabel {
  font-size: 20px;
}

.Filter,
.Category {
  padding: 7px 17px;
}

.Filter:first-of-type,
.Category:first-of-type {
  margin-top: 5px;
}

.checkbox {
  margin-left: 5px;
}

.FilterGroup,
.CategoryGroup {
  padding-bottom: 40px;
}


.cardBox {
  display: flex;
  flex: 1;
  min-height: min-content;
  flex-wrap: wrap;
  background: #ddd;
  justify-content: center;
  padding-bottom: 40px;

}

.Card {
  width: 270px;
  background: var(--secondary-bg-color);
  margin: 30px 20px;
  border-radius: 9px;
  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
  overflow: hidden;
}

.Card:hover .cardEffectName {
  color: var(--highlight);
}

.cardImg {
  overflow: hidden;
  line-height: 0em;
}

.cardImg img {
  max-width: 100%;
  height: auto;
  opacity: 0.8;
  transition: all 0.2s;
}

.Card:hover .cardImg img {
  opacity: 1;
  transform: scale(1.1);
}

.cardAuthorName {
  color: #464646;
  padding-bottom: 2px;
  font-size: 14px;
  padding: 5px 8px;
}

.cardEffectName {
  transition: all 0.2s;
  font-size: 22px;
  padding: 5px 8px;
}

.cardText {
  display: flex;
  align-items: center;
  padding: 5px 8px;
}

.cardRatingTotal,
.cardDownloadText {
  color: #464646;
}

.cardDotImg {
  /*top right bottom left*/
  /*top right/left bottom*/
  padding: 4px 6px 0px;
}

.ResultsPage {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0px 50px;
  max-width: 1600px;
  flex-wrap: wrap-reverse;
}

.resultBox {
  margin: 20px 10px;
  border-radius: 10px;
  min-width:500px;
  max-width:800px;
  flex:1;
  box-sizing:border-box;
}

.resultsTitle {
  font-size: 18px;
}

.resultCard {
  display: flex;
  flex-direction: row;
  margin: 12px 20px 12px 0px;
  border-radius: 10px;
  background-color: #eee;
  transition: all 0.2s;
  cursor: pointer;
}

.resultCard.selected {
  margin-right: 0px;
}

.resultCard.selected .cardEffectName {
  color: var(--highlight);
}

.resultCard:hover {
  margin-right: 0px;
  background: var(--bluehighlight2);
}

.resultCardImg {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  line-height: 0px;
  height: 100%;
  overflow: hidden;
  width:150px;
}

.resultCardImg img {
  opacity: 0.8;
  transition: all 0.2s;
}

.resultCard:hover .resultCardImg img {
  transform: scale(1.2);
  opacity: 1;
}

.resultCardText {
  padding-left: 10px;
  padding-right: 10px;
}

.resultDotImg {
  padding: 4px 6px 0px;
}

.resultRateDownloadText {
  word-wrap: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 10px;
}

.descriptionBox {
  min-width: 500px;
  max-width:800px;
  background-color: #eee;
  border-radius: 10px;
  margin: 20px 10px;
  flex:1;
  box-sizing:border-box;
}

.descriptionImage {
  max-width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.descriptionHeader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.descriptionHeaderLeft {
  display: flex;
  flex-direction: column;
}

.descriptionText {
  margin: 0px 20px 20px;
  height:350px;
  overflow-y: auto;
}

.descriptionName {
  font-size: 22px;
  font-weight: 600;
}

.descriptionDesc {
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  word-wrap: normal;
}

.descriptionAuthYear {
  color: #464646;
  font-size: 14px;
}

.downloadButton{
  height: 36px;
  width: 36px;
  margin-top: 6px;
}

.UploadForm{
  border: 1px solid red;
  margin: 0px auto;
  padding: 60px;
  max-width: min-content;
  display: flex; 
  justify-content: center;
  flex-direction: column;
}

.effectNameInput{
  display: flex;
  flex-direction: column;
  width: 400px;
}

.effectNameInput span{
  font-size: 13px;
  color: #464646;
}

.effectNameInput input[type=text] {
  border-bottom: 1px solid #502f2f;
}

.resetButton, .submitButton {
  border: 1px solid #464646;
  margin: 0px 5px;
  width: 70px;
  height: 24px;
}
.buttonInputs{
  display: flex;
  flex-direction: row;
  margin: 0px auto;
}

